# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apitoolkit-flask"
version = "0.2.2"
description = "APIToolkit SDK for Flask"
authors = [{ name = "Anthony ALaribe", email = "anthonyalaribe@gmail.com" }]
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["API", "APIToolkit", "Observability", "API Monitoring"]
dependencies = [
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/apitoolkit/apitoolkit-flask"

[tool.setuptools.dynamic]
readme = {file=["README.md"]}

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
